tests/NormalTests/paczka1/fuzzy1/42864714.err
Error in line 21: uKUbQ1W8x7y S379 373,67
Error in line 20: dMAJuM25J S769 21,7
Error in line 16: uKUbQ1W8x7y S379 87,1
Error in line 22: dMAJuM25J S379 33,4
Error in line 26: JTrzwSVm A260 30,1
Error in line 17: Xou A876 0,7
Error in line 24: uKUbQ1W8x7y S769 49,9
